# Gemini-Terminal-Chat

./: .gitignore  Cargo.toml  README.md
src/: api.rs  app.rs  main.rs  tui.rs  ui.rs
