[package]
name = "Gemini-Terminal-Chat"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
dotenvy = "0.15.7"
